--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,7 @@ rightarrow to render math notation, whereas Agda allows unicode in source files.
 <p>In figure <a href="#fig:library_scope" data-reference-type="ref" data-reference="fig:library_scope">1</a>, a summary of which topics are covered by each prover is shown. We will detail each of these categories in the following sections.</p>
 <div id="tab:litresults">
 <table>
+<caption>Literature review papers</caption>
 <thead>
 <tr class="header">
 <th style="text-align: left;">Area</th>
@@ -1070,18 +1071,148 @@ rightarrow to render math notation, whereas Agda allows unicode in source files.
 <td style="text-align: left;">Universal</td>
 <td style="text-align: left;">Coq, Isabelle</td>
 </tr>
+<tr class="even">
+<td style="text-align: left;">Foundations</td>
+<td style="text-align: left;">Model Theory</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Foundations</td>
+<td style="text-align: left;">Sets</td>
+<td style="text-align: left;">Coq, Isabelle</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Foundations</td>
+<td style="text-align: left;">Proof</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Number Theory</td>
+<td style="text-align: left;">Analytic</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Number Theory</td>
+<td style="text-align: left;">Algebraic</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Number Theory</td>
+<td style="text-align: left;">Diophantine</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Analysis</td>
+<td style="text-align: left;">Real Analysis</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Analysis</td>
+<td style="text-align: left;">Functional Analysis</td>
+<td style="text-align: left;">Isabelle</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Analysis</td>
+<td style="text-align: left;">Complex Analysis</td>
+<td style="text-align: left;">Isabelle</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Analysis</td>
+<td style="text-align: left;">Harmonic Analysis</td>
+<td style="text-align: left;">Isabelle</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Analysis</td>
+<td style="text-align: left;">Measure Theory</td>
+<td style="text-align: left;">Isabelle</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Topology</td>
+<td style="text-align: left;">General</td>
+<td style="text-align: left;">Isabelle, Coq, HOL Light</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Topology</td>
+<td style="text-align: left;">Algebraic</td>
+<td style="text-align: left;">Isabelle, Coq</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Topology</td>
+<td style="text-align: left;">Differential</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Combinatorics</td>
+<td style="text-align: left;">Enumerative</td>
+<td style="text-align: left;">Coq, Isabelle*, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Combinatorics</td>
+<td style="text-align: left;">Extremal</td>
+<td style="text-align: left;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Combinatorics</td>
+<td style="text-align: left;">Graph Theory</td>
+<td style="text-align: left;">Coq, Isabelle*, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Convex</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Discrete</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Differential</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Algebraic</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Arithmetic</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Geometry</td>
+<td style="text-align: left;">Diophantine</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Computer Science</td>
+<td style="text-align: left;">Numerical Analysis</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Computer Science</td>
+<td style="text-align: left;">Computer Algebra</td>
+<td style="text-align: left;">Coq, Isabelle, HOL Light</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Computer Science</td>
+<td style="text-align: left;">Complexity Theory</td>
+<td style="text-align: left;">Coq, Isabelle</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Probability</td>
+<td style="text-align: left;">Probability Theory</td>
+<td style="text-align: left;">Coq, Isabelle</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Probability</td>
+<td style="text-align: left;">Statistics</td>
+<td style="text-align: left;">Coq, Isabelle</td>
+</tr>
 </tbody>
 </table>
-<p>Foundations Model Theory<br />
-Foundations Sets Coq, Isabelle Foundations Proof Coq, Isabelle, HOL Light</p>
-<p>Number Theory Analytic Number Theory Algebraic Number Theory Diophantine</p>
-<p>Analysis Real Analysis Analysis Functional Analysis Isabelle Analysis Complex Analysis Isabelle Analysis Harmonic Analysis Isabelle Analysis Measure Theory Isabelle</p>
-<p>Topology General Isabelle, Coq, HOL Light Topology Algebraic Isabelle, Coq Topology Differential</p>
-<p>Combinatorics Enumerative Coq, Isabelle*, HOL Light Combinatorics Extremal<br />
-Combinatorics Graph Theory Coq, Isabelle*, HOL Light</p>
-<p>Geometry Convex Coq, Isabelle, HOL Light Geometry Discrete Coq, Isabelle, HOL Light Geometry Differential Coq, Isabelle, HOL Light Geometry Algebraic Coq, Isabelle, HOL Light Geometry Arithmetic Coq, Isabelle, HOL Light Geometry Diophantine Coq, Isabelle, HOL Light</p>
-<p>Computer Science Numerical Analysis Coq, Isabelle, HOL Light Computer Science Computer Algebra Coq, Isabelle, HOL Light Computer Science Complexity Theory Coq, Isabelle Probability Probability Theory Coq, Isabelle Probability Statistics Coq, Isabelle</p>
-<p>: Literature review papers</p>
 </div>
 <figure>
 <img src="Images/Problems/Quality%20of%20Library/out.png" id="fig:library_scope" alt="Caterogies of Mathematics covered by ITP" /><figcaption aria-hidden="true">Caterogies of Mathematics covered by ITP</figcaption>
