--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
+  <script defer src="src/bundle.js"></script>
 </head>
 <body>
 <header id="title-block-header">
@@ -1031,6 +1032,9 @@ rightarrow to render math notation, whereas Agda allows unicode in source files.
 <img src="Images/MyProblem.png" alt="image" /><figcaption aria-hidden="true">image</figcaption>
 </figure>
 <h2 id="scope-of-library">Scope of Library</h2>
+<div id="classification">
+
+</div>
 <p>In a focus group, it was identified that Isabelle was missing important mathematical foundations from its library <span class="citation" data-cites="beckert_usability_2015">(Beckert, Grebing, and Böhl 2015)</span>.</p>
 <p>ITPs, being very close to the language of mathematics, often make use of mathematical theory in order to prove propositions. This is especially the case when it’s use is within the field of mathematics itself in contrast to proving the correctness of software systems.</p>
 <p>When using an ITP to prove theorems from mathematics, the scope of the library to work with is important. For instance, if you wished to prove a property within topology, then having topological foundations in your library available would be beneficial. However, it becomes less necessary when proving that code meets its specification. Some theorem provers such as KeY, due to it being a direct manipulation theorem prover, does not have a standard library, but still can be used to prove that software meets its specification.</p>
@@ -1097,116 +1101,111 @@ rightarrow to render math notation, whereas Agda allows unicode in source files.
 <td style="text-align: left;"></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;">Number Theory</td>
-<td style="text-align: left;">Diophantine</td>
-<td style="text-align: left;"></td>
-</tr>
-<tr class="even">
 <td style="text-align: left;">Analysis</td>
 <td style="text-align: left;">Real Analysis</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Analysis</td>
 <td style="text-align: left;">Functional Analysis</td>
 <td style="text-align: left;">Isabelle</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Analysis</td>
 <td style="text-align: left;">Complex Analysis</td>
 <td style="text-align: left;">Isabelle</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Analysis</td>
 <td style="text-align: left;">Harmonic Analysis</td>
 <td style="text-align: left;">Isabelle</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Analysis</td>
 <td style="text-align: left;">Measure Theory</td>
 <td style="text-align: left;">Isabelle</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Topology</td>
 <td style="text-align: left;">General</td>
 <td style="text-align: left;">Isabelle, Coq, HOL Light</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Topology</td>
 <td style="text-align: left;">Algebraic</td>
 <td style="text-align: left;">Isabelle, Coq</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Topology</td>
 <td style="text-align: left;">Differential</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Combinatorics</td>
 <td style="text-align: left;">Enumerative</td>
 <td style="text-align: left;">Coq, Isabelle*, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Combinatorics</td>
 <td style="text-align: left;">Extremal</td>
 <td style="text-align: left;"></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Combinatorics</td>
 <td style="text-align: left;">Graph Theory</td>
 <td style="text-align: left;">Coq, Isabelle*, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Convex</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Discrete</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Differential</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Algebraic</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Arithmetic</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Geometry</td>
 <td style="text-align: left;">Diophantine</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Computer Science</td>
 <td style="text-align: left;">Numerical Analysis</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Computer Science</td>
 <td style="text-align: left;">Computer Algebra</td>
 <td style="text-align: left;">Coq, Isabelle, HOL Light</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Computer Science</td>
 <td style="text-align: left;">Complexity Theory</td>
 <td style="text-align: left;">Coq, Isabelle</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td style="text-align: left;">Probability</td>
 <td style="text-align: left;">Probability Theory</td>
 <td style="text-align: left;">Coq, Isabelle</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;">Probability</td>
 <td style="text-align: left;">Statistics</td>
 <td style="text-align: left;">Coq, Isabelle</td>
@@ -1277,24 +1276,39 @@ rightarrow to render math notation, whereas Agda allows unicode in source files.
 <p>HOL Light does not contain formalizations of functional analysis.</p>
 <p>Measure theory is the study of measures. That is, ways of assigning cardinality to subsets of a set.</p>
 <p>Coq contains a formalization of measure theory for its use in the formalization of probability within coq-random. But other than that, does not contain any other formalizations.</p>
-<p>standard library, but does include definitions within Coq-CoRN.</p>
-<p>Isabelle has the most tools for analysis, including modules for Complex Analysis, Nonstandard Analysis, Asymptopic analysis, Multivariate Analysis and Functional Analysis.</p>
-<p>HOL Light has definitions for differentiation and multivariate analysis.</p>
-<p>All three theorem provers in this case have definitions for analysis. However, Isabelle has a clear margin with support for different areas of analysis.</p>
+<p>Isabelle contains a formalization of measure theory for probability inside HOL-Probability.</p>
+<p>HOL Light does not contain any formalizations for measure theory.</p>
 <h3 id="topology">Topology</h3>
-<p>Topology is the study of properties that are preserved through the deformation of objects. This is used to study properties of spaces required for other fields of mathematics. For instance, analysis is often founded on metric spaces from topology.</p>
-<p>Coq’s standard library does not contain any formalizations for topology, however there are libraries for general topology in the coq-topology package. It includes metric spaces, topological filters and nets.</p>
-<p>Isabelle has formalizations for Topology within its standard library. Including formalizations for Hausforff spaces and separation properties and topological filters.</p>
-<p>HOL Light does contain some formalizations for topology, mainly for the purpose of it’s real analysis library.</p>
-<p>All provers therefore contain formalizations for topology. We could not identify any missing library components.</p>
+<p>Topology is the study of properties that are preserved through the deformation of objects. This is used to study properties of spaces required for other fields of mathematics. For instance, analysis is often founded on metric spaces from topology. We split topology into three sections, general topology, differential topology and algebraic topology.</p>
+<p>General topology is the study of the basic set-theoretic definitions of topology. This is relevant to all other forms of topology.</p>
+<p>Coq does not cover general topology inside its standard library but does within coq-topology, a community package.</p>
+<p>Isabelle covers topological spaces in its HOL.Topological_Spaces.</p>
+<p>HOL Light has definitions for topological spaces as part of its Multivariate library.</p>
+<p>Differential Topology is the study of the topological proporties of smooth manifolds.</p>
+<p>Coq and Isabelle both have theorems such as the classification of closed surfaces. <!-- Can't find anything on Isabelle... This is tough. Moving on --></p>
+<p>HOL Light does not have any findings from Differential topology.</p>
+<p>Algebraic Topology attempts to use methods from abtract algebra to study topological spaces <!-- I currently don't know where to start --></p>
 <h3 id="combinatorics">Combinatorics</h3>
 <p>Combinatorics is the study of methods used for counting. It’s subfields include Enumerative, Extremal and Graph Theory.</p>
-<p>Coq also has formalizations for enumerative combinatorics, graph theory in its package ecosytem, but doesn’t have any formalizations for extremal combinatorics.</p>
-<p>Isabelle has proofs from enumerative combinatorics and graph theory in its archive of formal proofs. However, there does not seem to be any proofs from extremal combinatorics.</p>
-<p>HOL Light has formalizations for enumaritev combinatorics and graph theory, but again, not extremal combinatorics.</p>
-<p>All theorem prover provers are lacking extremal combinarics, but have enumaritive combinatorics and graph theory.</p>
+<p>Enumerative combinatorics is the study of counting. Permutations and combinations are examples of this field. <!-- I can't find examples of combinatorics. Should look through what Coq proves --></p>
+<p>Coq doesn’t have any findings from enumerative combinatorics in its library or package ecosystem. It however has work done indipendently <!-- https://hal.archives-ouvertes.fr/hal-01670709/document --></p>
+<p>Isabelle does have findings in enumerative combinatorics in its archive of formal proofs, such as counting equivalence relations (Card_Equiv_Relation) and the Twelve Fold Way.</p>
+<p>HOL Light does not have any findings from enumerative combinatorics.</p>
+<p>Extremal combinatorics is the study of the smallest number of elements in a problem that satisfy some restriction.</p>
+<p>Coq does not have any findings in its library, but contains findings such as Ramsey’s theorem in its package ecosystem (coq-ramsey).</p>
+<p>Isabelle also has Ramsey’s theorem proven in it’s Archive of Formal Proofs but not its library.</p>
+<p>HOL Light does not have any findings from Extremal Combinatorics.</p>
+<p>Graph Theory is the study of graphs, connected structures made of edges and nodes.</p>
+<p>Coq has findings from Graph Theory in its package ecosystem (coq-graph-basics).</p>
+<p>Isabelle also has graph theory findings in its Archive of Formal Proofs (Coq Graph)</p>
+<p>HOL Light does not have findings from Graph Theory</p>
 <h2 id="geometry">Geometry</h2>
 <p>Geometry is the study of the properties of space to do with distance.</p>
+<p>Geometry will be split up into 6 categories. Convex Geometry, Discrete Geometry Differential Geometry, Algebraic Geometry, Arithmetic Geometry and Diophantine Geometry.</p>
+<p>Convex Geometry is the study of Convex Sets. <!-- Really difficult to work out what fields are part of this. Because
+it's everywhere --></p>
+<p>Discrete Geometry is the study of combinatorial properties of discrete geometric objects.</p>
+<p>Coq does not have any findings. <!-- Coq doesn't seem to have any findings --></p>
 <p>Coq, Isabelle and HOL Light all have formalizations for geometry.</p>
 <h3 id="probability">Probability</h3>
 <p>Probability is the study of the likelihood that certain events will occur, or the likelihood that a proposition is true, depending on your interpretation.</p>
