Add Elm Living Review

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Math Classification</title>
+  <title>ITP Classification</title>
 <script defer src="bundle.js"></script></head>
 <body>
-  <div id="classification"> </div>
+  <div id="itps"> </div>
 </body>
 </html>
